// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`finds all errors in example '"1" 2' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Cannot apply a number or string as a function",
    "notes": [],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '"1" 2' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 3,
              "start": 0,
            },
          },
          "type": "implicit_placeholder",
        },
        {
          "children": [],
          "data": {
            "position": {
              "end": 5,
              "start": 4,
            },
            "value": 2,
          },
          "type": "number",
        },
      ],
      "data": {
        "operator": "application",
        "position": {
          "end": 5,
          "start": 0,
        },
        "precedence": [
          9007199254740989,
          9007199254740990,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '(' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "must be closed with ")" by that point",
        "start": 1,
      },
      {
        "end": 1,
        "kind": "primary",
        "message": "opening token "(" here",
        "start": 0,
      },
    ],
    "message": "Missing closing token",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '(' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
          },
          "type": "implicit_placeholder",
        },
      ],
      "data": {
        "operator": "parens",
        "position": {
          "end": 1,
          "start": 0,
        },
        "precedence": [
          null,
          null,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '({ 1 )' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 1,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '({ 1 )' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "position": {
                      "end": 4,
                      "start": 3,
                    },
                    "value": 1,
                  },
                  "type": "number",
                },
              ],
              "data": {
                "operator": "sequence",
                "position": {
                  "end": 4,
                  "start": 3,
                },
                "precedence": [
                  null,
                  null,
                ],
              },
              "type": "operator",
            },
          ],
          "data": {
            "operator": "block",
            "position": {
              "end": 4,
              "start": 1,
            },
            "precedence": [
              null,
              null,
            ],
          },
          "type": "operator",
        },
      ],
      "data": {
        "operator": "parens",
        "position": {
          "end": 6,
          "start": 0,
        },
        "precedence": [
          null,
          null,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example ')' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example ')' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '[' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "somewhere here",
        "start": 0,
      },
    ],
    "message": "Missing token, expected one of: "]"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 0,
        "kind": "primary",
        "message": "here",
        "start": 0,
      },
    ],
    "message": "Unexpected end of source",
    "notes": [],
    "type": "END_OF_SOURCE",
  },
]
`;

exports[`finds all errors in example '[' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 0,
              "start": 0,
            },
          },
          "type": "implicit_placeholder",
        },
      ],
      "data": {
        "operator": "square_brackets",
        "position": {
          "end": 1,
          "start": 0,
        },
        "precedence": [
          null,
          null,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example ']' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token "]"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example ']' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '{ (1 }' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '{ (1 }' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "position": {
                      "end": 4,
                      "start": 3,
                    },
                    "value": 1,
                  },
                  "type": "number",
                },
              ],
              "data": {
                "operator": "parens",
                "position": {
                  "end": 4,
                  "start": 2,
                },
                "precedence": [
                  null,
                  null,
                ],
              },
              "type": "operator",
            },
          ],
          "data": {
            "operator": "sequence",
            "position": {
              "end": 4,
              "start": 2,
            },
            "precedence": [
              null,
              null,
            ],
          },
          "type": "operator",
        },
      ],
      "data": {
        "operator": "block",
        "position": {
          "end": 6,
          "start": 0,
        },
        "precedence": [
          null,
          null,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '{' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "somewhere here",
        "start": 0,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '{' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "operator": "sequence",
            "position": {
              "end": 0,
              "start": 0,
            },
            "precedence": [
              null,
              null,
            ],
          },
          "type": "operator",
        },
      ],
      "data": {
        "operator": "block",
        "position": {
          "end": 1,
          "start": 0,
        },
        "precedence": [
          null,
          null,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '}' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '}' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '1 *' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Expected right hand side for operator",
    "notes": [
      "Caused by: [END_OF_SOURCE] Unexpected end of source",
    ],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 *' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
            "value": 1,
          },
          "type": "number",
        },
        {
          "children": [],
          "data": {
            "position": {
              "end": 2,
              "start": 2,
            },
          },
          "type": "implicit_placeholder",
        },
      ],
      "data": {
        "operator": "*",
        "position": {
          "end": 3,
          "start": 0,
        },
        "precedence": [
          14,
          14,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '1 +' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Expected right hand side for operator",
    "notes": [
      "Caused by: [END_OF_SOURCE] Unexpected end of source",
    ],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 +' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
            "value": 1,
          },
          "type": "number",
        },
        {
          "children": [],
          "data": {
            "position": {
              "end": 2,
              "start": 2,
            },
          },
          "type": "implicit_placeholder",
        },
      ],
      "data": {
        "operator": "add",
        "position": {
          "end": 3,
          "start": 0,
        },
        "precedence": [
          11,
          11,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example '1 2' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Cannot apply a number as a function",
    "notes": [],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 2' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
          },
          "type": "implicit_placeholder",
        },
        {
          "children": [],
          "data": {
            "position": {
              "end": 3,
              "start": 2,
            },
            "value": 2,
          },
          "type": "number",
        },
      ],
      "data": {
        "operator": "application",
        "position": {
          "end": 3,
          "start": 0,
        },
        "precedence": [
          9007199254740989,
          9007199254740990,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example 'x[(1]' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example 'x[(1]' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
            "value": "x",
          },
          "type": "name",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "position": {
                  "end": 4,
                  "start": 3,
                },
                "value": 1,
              },
              "type": "number",
            },
          ],
          "data": {
            "operator": "parens",
            "position": {
              "end": 4,
              "start": 2,
            },
            "precedence": [
              null,
              null,
            ],
          },
          "type": "operator",
        },
      ],
      "data": {
        "operator": "index",
        "position": {
          "end": 5,
          "start": 0,
        },
        "precedence": [
          9007199254740988,
          null,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;

exports[`finds all errors in example 'x[{ 1 ]' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 5,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example 'x[{ 1 ]' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
            "value": "x",
          },
          "type": "name",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "position": {
                      "end": 5,
                      "start": 4,
                    },
                    "value": 1,
                  },
                  "type": "number",
                },
              ],
              "data": {
                "operator": "sequence",
                "position": {
                  "end": 5,
                  "start": 4,
                },
                "precedence": [
                  null,
                  null,
                ],
              },
              "type": "operator",
            },
          ],
          "data": {
            "operator": "block",
            "position": {
              "end": 5,
              "start": 2,
            },
            "precedence": [
              null,
              null,
            ],
          },
          "type": "operator",
        },
      ],
      "data": {
        "operator": "index",
        "position": {
          "end": 7,
          "start": 0,
        },
        "precedence": [
          9007199254740988,
          null,
        ],
      },
      "type": "operator",
    },
  ],
  "data": {},
  "type": "script",
}
`;
